fixed aligning and adjustment to small screens

--- a/src/app/shared/components/search-window/search-helper/search-helper.component.scss
+++ b/src/app/shared/components/search-window/search-helper/search-helper.component.scss
@@ -1,6 +1,12 @@
 .searchHints {
   background-color: var(--cardBackground);
   margin-bottom: 5px;
+  width: 20vw;
+}
+
+.main {
+  overflow: scroll;
+  max-height: 100vh;
 }
 
 .subtitle {
